Improve layout computation of connection figures.